style: add float for elements within header and footer

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -217,3 +217,25 @@ p {
     padding: 22px 80px 66px 80px;
 }
 
+/*
+  ========================================
+  Primary header
+  ========================================
+*/
+
+.logo {
+    border-top: 4px solid #648880;
+    padding: 40px 0 22px 0;
+    float: left;
+}
+
+/*
+  ========================================
+  Primary footer
+  ========================================
+*/
+
+.primery-footer small {
+    float: left;
+}
+
