--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -235,7 +235,12 @@ p {
   ========================================
 */
 
-.primery-footer small {
+.primary-footer small {
     float: left;
 }
 
+
+.primary-footer {
+    padding-bottom: 44px;
+    padding-top: 44px;
+}
