--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -143,16 +143,42 @@ table {
 *,
 *:before,
 *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+     -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+             box-sizing: border-box;
+}
+
+.container,
+.grid {
+    margin: 0 auto;
+    width: 960px;
 }
 
 .container {
-    margin: 0 auto;
     padding-left: 30px;
     padding-right: 30px;
-    width: 960px;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.col-1-3,
+.col-2-3 {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: -4px;
+}
+
+.col-1-3 {
+    width: 33.33%;
+}
+
+.col-2-3 {
+    width: 66.66%;
 }
 
 /*
@@ -173,7 +199,7 @@ table {
 
 .group {
     clear: both;
-    zoom: 1;
+    *zoom: 1;
 }
 
 /*
@@ -207,15 +233,7 @@ p {
     padding: 10px 30px;
 }
 
-/*
-  ========================================
-  Home
-  ========================================
-*/
 
-.hero {
-    padding: 22px 80px 66px 80px;
-}
 
 /*
   ========================================
@@ -225,8 +243,8 @@ p {
 
 .logo {
     border-top: 4px solid #648880;
-    padding: 40px 0 22px 0;
     float: left;
+    padding: 40px 0 22px 0;
 }
 
 /*
@@ -235,12 +253,21 @@ p {
   ========================================
 */
 
+.primary-footer {
+    padding-bottom: 44px;
+    padding-top: 44px;
+}
+
 .primary-footer small {
     float: left;
 }
 
+/*
+  ========================================
+  Home
+  ========================================
+*/
 
-.primary-footer {
-    padding-bottom: 44px;
-    padding-top: 44px;
+.hero {
+    padding: 22px 80px 66px 80px;
 }
