--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,6 +1,6 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
+    v2.0 | 20110126
+    License: none (public domain)
 */
 
 html,
@@ -135,17 +135,30 @@ table {
 }
 
 /*
-  ========================================
-  Grid
-  ========================================
+    ========================================
+    Custom styles
+    ========================================
+*/
+
+body {
+    color: #888;
+    font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+
+}
+
+/*
+    ========================================
+    Grid
+    ========================================
 */
 
 *,
 *:before,
 *:after {
-     -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-             box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .container,
@@ -182,9 +195,9 @@ table {
 }
 
 /*
-  ========================================
-  Clearfix
-  ========================================
+    ========================================
+    Clearfix
+    ========================================
 */
 
 .group:before,
@@ -199,13 +212,13 @@ table {
 
 .group {
     clear: both;
-    *zoom: 1;
+    zoom: 1;
 }
 
 /*
-  ========================================
-  Typography
-  ========================================
+    ========================================
+    Typography
+    ========================================
 */
 
 h1,
@@ -216,10 +229,51 @@ p {
     margin-bottom: 22px;
 }
 
+h1,
+h2,
+h3,
+h4 {
+    color: #648880;
+}
+
+h1 {
+    font-size: 36px;
+    line-height: 44px;
+}
+
+h2 {
+    font-size: 24px;
+    line-height: 44px;
+}
+
+h3 {
+    font-size: 21px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+h5 {
+    color: #a9b2b9;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+strong {
+    font-weight: 400;
+
+}
+
+cite,
+em {
+    font-style: italic;
+}
+
 /*
-  ========================================
-  Buttons
-  ========================================
+    ========================================
+    Buttons
+    ========================================
 */
 
 .btn {
@@ -236,9 +290,9 @@ p {
 
 
 /*
-  ========================================
-  Primary header
-  ========================================
+    ========================================
+    Primary header
+    ========================================
 */
 
 .logo {
@@ -248,9 +302,9 @@ p {
 }
 
 /*
-  ========================================
-  Primary footer
-  ========================================
+    ========================================
+    Primary footer
+    ========================================
 */
 
 .primary-footer {
@@ -263,9 +317,9 @@ p {
 }
 
 /*
-  ========================================
-  Home
-  ========================================
+    ========================================
+    Home
+    ========================================
 */
 
 .hero {
