style: add some typographic styles

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -298,7 +298,18 @@ em {
 .logo {
     border-top: 4px solid #648880;
     float: left;
+    font-size: 48px;
+    line-height: 44px;
     padding: 40px 0 22px 0;
+}
+
+.tagline {
+    margin: 66px 0 22px 0;
+}
+
+.primary-nav {
+    font-size: 14px;
+    font-weight: 400;
 }
 
 /*
@@ -308,12 +319,15 @@ em {
 */
 
 .primary-footer {
+    color: #648880;
+    font-size: 14px;
     padding-bottom: 44px;
     padding-top: 44px;
 }
 
 .primary-footer small {
     float: left;
+    font-weight: 400;
 }
 
 /*
@@ -323,5 +337,28 @@ em {
 */
 
 .hero {
+    line-height: 44px;
     padding: 22px 80px 66px 80px;
+}
+
+.hero h2 {
+    font-size: 36px;
+}
+
+.hero p {
+    font-size: 24px;
+}
+
+/*
+    ========================================
+    Links
+    ========================================
+*/
+
+.teaser a:hover h3 {
+    color: #a9b2b9;
+}
+
+a {
+    color: #648880;
 }
