--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -300,8 +300,11 @@ em {
     border-top: 4px solid #648880;
     float: left;
     font-size: 48px;
+    font-weight: 100;
+    letter-spacing: .5px;
     line-height: 44px;
     padding: 40px 0 22px 0;
+    text-transform: uppercase;
 }
 
 .tagline {
