style: add hover effect for anchors in the teasers

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -273,6 +273,26 @@ em {
 
 /*
     ========================================
+    Links
+    ========================================
+*/
+
+
+a {
+    color: #648880;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #a9b2b9;
+}
+
+p a {
+    border-bottom: 1px solid #dfe2e5;
+}
+
+/*
+    ========================================
     Buttons
     ========================================
 */
@@ -337,6 +357,17 @@ em {
     font-weight: 400;
 }
 
+
+/*
+    ========================================
+    Navigation
+    ========================================
+*/
+
+.nav {
+    text-align: right;
+}
+
 /*
     ========================================
     Home
@@ -358,39 +389,6 @@ em {
     font-weight: 300;
 }
 
-/*
-    ========================================
-    Links
-    ========================================
-*/
-
-/* .teasers a:hover h3 {
+.teaser a:hover h3 {
     color: #a9b2b9;
-}
-
-a {
-    color: #648880;
-} */
-
-a {
-    color: #648880;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #a9b2b9;
-}
-
-p a {
-    border-bottom: 1px solid #dfe2e5;
-}
-
-/*
-    ========================================
-    Navigation
-    ========================================
-*/
-
-.nav {
-    text-align: right;
 }
