--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -292,6 +292,16 @@ p a {
     border-bottom: 1px solid #dfe2e5;
 }
 
+.primary-header a,
+.primary-footer a {
+    color: #fff;
+}
+
+.primary-header a:hover,
+.primary-footer a:hover {
+    color: #648880;
+}
+
 /*
     ========================================
     Buttons
@@ -321,7 +331,7 @@ p a {
     border-top: 4px solid #648880;
     float: left;
     font-size: 48px;
-    font-weight: 300;
+    font-weight: 100;
     letter-spacing: .5px;
     line-height: 44px;
     padding: 40px 0 22px 0;
