--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -218,6 +218,18 @@ body {
 
 /*
     ========================================
+    Rows
+    ========================================
+*/
+
+.row {
+    background: #fff;
+    min-width: 960px;
+    padding: 66px 0 44px 0;
+}
+
+/*
+    ========================================
     Typography
     ========================================
 */
