--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -236,7 +236,8 @@ body {
     background: #cbe2c1;
     background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
     background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
-    background: linear-gradient(to right, #a1d3b0, #f6f1d3) padding: 44px 0 22px 0;
+    background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+    padding: 44px 0 22px 0;
 }
 
 
