--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -299,6 +299,21 @@ em {
 
 /*
     ========================================
+    Leads
+    ========================================
+*/
+
+.lead {
+    text-align: center;
+}
+
+.lead p {
+    font-size: 21px;
+    line-height: 33px;
+}
+
+/*
+    ========================================
     Links
     ========================================
 */
