--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -486,7 +486,7 @@ p a {
     border: 1px solid #dfe2e5;
     border-radius: 5px;
     margin-top: 88px;
-    padding: 22px 0;
+    padding: 22px;
     text-align: center;
 }
 
