style: create styles rule set for the Register page

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -514,3 +514,14 @@ p a {
 .vanue-map {
     height: 264px;
 }
+
+/*
+    ========================================
+    Register
+    ========================================
+*/
+
+.why-attend {
+    list-style: square;
+    margin: 0 0 22px 30px;
+}
